--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="nombre">Sergio Fernández Segura ASIR1</h1>
-    <h1 id="Inicio">Práctica 2 de ASIR1 en colegio <a class="spanespecial" target="_blank" href="www.andel.es"> Andel</a></h1>
+    <h1 id="Inicio">Práctica 2 de ASIR1 en colegio <a class="spanespecial" target="_blank" href="https://www.andel.es"> Andel</a></h1>
     <h1>Textos</h1>
     
     <hr>
